chore: macOS dispatch_async